[package]
name = "tauri-plugin-cookie-fetch"
version = "0.3.1"
description = "fetch with cookie"
edition = "2021"
build = "./build.rs"

[dependencies]
reqwest = { version = "0.11", features = ["cookies"] }
reqwest_cookie_store = "0.6"
deadpool = "0.10"
async-trait = "0.1"
tauri = { version = "1", features = ["shell-open", "http-api"] }
serde = { version = "1", features = ["derive"] }
bytes = "1.5"

[dev-dependencies]
serde_json = "1.0"
