[package]
name = "tauri-plugin-cookie-fetch-example-vanilla"
version = "0.0.0"
description = "tauri-plugin-cookie-fetch example"
authors = ["maemon4095"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-cookie-fetch = { path = "../../../" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
